@@ -210,6 +210,9 @@ appear in a tile.
 attempts to set the tile dimensions so that no more than 8 kilobytes of data
 appear in a tile.
 .TP
+.B \-x
+Force the output file to be written with PAGENUMBER value in sequence.
+.TP
 .BI \-,= character
 substitute
 .I character
